--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,4 @@
-<form action="/login" class="login" method="post">
+<form action="/login" method="post">
   <p>
     <label for="openid_identifier">Identifiant openid :</label>
     <input id="openid_identifier" name="openid_identifier" type="text"/>
