--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -1,5 +1,5 @@
 body
-  background-color :white
+  background-color: white
   font:
     family: "Helvetica Neue", Helvetica, "Lucida Grande", Verdana, sans-serif
     size: 12px
@@ -34,3 +34,9 @@ a:hover
   top: 20px
   left: 100px
   font-size: 16px
+
+#navigation a
+  padding-right: 10px
+
+form p
+  padding-bottom: 5px
