début de gestion des comptes

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div id="navigation">
+  <a href="/accounts">Comptes</a>
   <% if session[:user] %>
     <a href="/admin">Administration</a>
     <a href="/logout">Logout</a>
@@ -22,5 +23,20 @@
 
   <%= yield %>
 </div>
+
+<div id="messages">
+  <% if flash[:error] %>
+    <div id="error" class="flash"><%= flash[:error] %></div>
+  <% end %>
+
+  <% if flash[:warning] %>
+    <div id="warning" class="flash"><%= flash[:warning] %></div>
+  <% end %>
+
+  <% if flash[:notice] %>
+    <div id="notice" class="flash"><%= flash[:notice] %></div>
+  <% end %>
+</div>
+
 </body>
 </html>
