--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -16,6 +16,9 @@ a
   text-decoration: none
   color: black
   font-weight: bold
+  background-color: #D0FFFF
+  padding-right: 2px
+  padding-left: 2px
 
 a:hover
   text-decoration: underline
@@ -36,7 +39,26 @@ a:hover
   font-size: 16px
 
 #navigation a
-  padding-right: 10px
+  margin-right: 10px
 
 form p
   padding-bottom: 5px
+
+#notice
+  border: 2px solid green
+  color: #ffffff
+
+
+#warning
+  border: 2px solid orange
+  color: #ffffff
+
+
+#error
+  border: 2px solid red
+  color: #ffffff
+
+#messages
+  position: absolute
+  top: 0
+
