--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -25,7 +25,7 @@ a:hover
 
 #content
   position: absolute
-  top: 50px
+  top: 70px
   left: 100px
 
 #title
@@ -34,31 +34,33 @@ a:hover
 
 #navigation
   position: absolute
-  top: 20px
+  top: 40px
   left: 100px
   font-size: 16px
 
 #navigation a
   margin-right: 10px
 
-form p
+p
   padding-bottom: 5px
+
 
 #notice
   border: 2px solid green
-  color: #ffffff
-
+  padding: 2px
 
 #warning
   border: 2px solid orange
-  color: #ffffff
-
+  padding: 2px
 
 #error
   border: 2px solid red
-  color: #ffffff
+  padding: 2px
 
 #messages
   position: absolute
   top: 0
-
+  color: black
+  font:
+    weight: bold
+    size: 14px
