tester les comptes

--- a/views/accounts/edit.html.erb
+++ b/views/accounts/edit.html.erb
@@ -2,7 +2,7 @@
 
   <%= input_text('account[name]', 'Nom du compte', @account.name) %>
 
-  <%= input_text('account[username]', 'Utilisateur', @account.username) %>
+  <%= input_text('account[address]', 'Adresse mail', @account.address) %>
   <%= input_text('account[server_address]', 'Adresse du serveur', @account.server_address) %>
   <%= input_text('account[password]', 'Mot de passe', @account.password) %>
   <%= input('account[port]', 'Port', @account.port, 'number') %>
