--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -16,7 +16,7 @@ a
   text-decoration: none
   color: black
   font-weight: bold
-  background-color: #D0FFFF
+  background-color: #E0E0E0
   padding-right: 2px
   padding-left: 2px
 
@@ -64,3 +64,8 @@ p
   font:
     weight: bold
     size: 14px
+
+.messageOK
+  color: green
+.messageKO
+  color: red
