--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -1,7 +1,7 @@
 body
   background-color: white
   font:
-    family: "Helvetica Neue", Helvetica, "Lucida Grande", Verdana, sans-serif
+    family: Helvetica, "Helvetica Neue", "Lucida Grande", Verdana, sans-serif
     size: 12px
   color: black
   
@@ -23,6 +23,11 @@ a
 a:hover
   text-decoration: underline
 
+fieldset
+  padding: 5px
+  border: 1px solid #b0b0b0
+  margin-bottom: 10px  
+
 #content
   position: absolute
   top: 70px
@@ -42,7 +47,7 @@ a:hover
   margin-right: 10px
 
 p
-  padding-bottom: 5px
+  padding-bottom: 8px
 
 
 #notice
@@ -64,6 +69,10 @@ p
   font:
     weight: bold
     size: 14px
+
+.bordered
+  border: 1px solid #D0D0D0
+  padding: 5px
 
 .messageOK
   color: green
