--- a/views/admin/index.html.erb
+++ b/views/admin/index.html.erb
@@ -1,3 +1,7 @@
 <form action="/send_mail" method="post">
-    <input name="commit" type="submit" value="Envoyer un mail maintenant"/>
+    <input name="commit" type="submit" value="Envoyer un mail"/>
+</form>
+<br/>
+<form action="/check_all" method="get">
+    <input name="commit" type="submit" value="Relever les comptes"/>
 </form>
