--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,10 +5,13 @@
   <title>[dredd] <%= @title %></title>
   <meta charset="utf-8">
   <script src="/jquery.js" type="text/javascript"></script>
+  <!--[if IE]><script language="javascript" type="text/javascript" src="excanvas.js"></script><![endif]-->
+  <script src="/jquery.flot.js" type="text/javascript"></script>
   <script src="/dredd.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="navigation">
+  <a href="/">Index</a>
   <a href="/accounts">Comptes</a>
   <% if @user_logged %>
     <a href="/admin">Administration</a>
