--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -78,3 +78,11 @@ p
   color: green
 .messageKO
   color: red
+
+#graph
+  width: 600px
+  height: 200px
+
+#legend
+  padding-bottom: 10px
+  padding-left: 10px
