--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -1,1 +1,46 @@
-Hello world!
+<div class="graph" id="graphGeneral"></div>
+<div id="legend"></div>
+
+<script>
+  <%
+  avg_data = []
+  max_data = []
+  max_data_info = []
+  avg_data_info = []
+  @original_messages.each do |original_message_hash|
+  original_message = original_message_hash[:original_messages]
+    date = original_message.sent_at.to_i * 1000
+    if original_message.average_time_to_receive
+      avg_data << [date, original_message.average_time_to_receive]
+      avg_data_info << original_message.id
+    end
+    slower_received_message = original_message_hash[:slower_received_message]
+    if slower_received_message
+      max_data << [date, slower_received_message.delay]
+      max_data_info << [original_message_hash[:account].name, slower_received_message.id]
+    end
+  end
+  %>
+
+  <%= "var avg_data = #{avg_data.to_json};
+      var max_data = #{max_data.to_json};
+      var max_data_info = #{max_data_info.to_json};
+      var avg_data_info = #{avg_data_info.to_json}"%>
+
+  $.plot($("#graphGeneral"),
+          [
+            { label: "Temps moyen", data: avg_data},
+            { label: "Dernier arrivé", data: max_data}
+          ],
+  {
+    series: {
+      points: { show: true },
+      lines: { show: true }
+    },
+    xaxis: { mode: "time" },
+    yaxis: { min: 0},
+    grid: { hoverable: true, clickable: true },
+    legend: { show: true, container: $("#legend") }
+  });
+
+</script>
