--- a/views/accounts/show.html.erb
+++ b/views/accounts/show.html.erb
@@ -28,7 +28,7 @@
 
   $.plot($("#graphAccount"),
           [
-            { label: "Délai en secondes", data: plot_data, lines: { show: true }},
+            { label: "Délai (en secondes)", data: plot_data, lines: { show: true }},
             { label: "Mails manquants", data: miss_data, lines: { show: false }}
           ],
   {
