--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -29,8 +29,8 @@
 
   $.plot($("#graphGeneral"),
           [
-            { label: "Temps moyen", data: avg_data},
-            { label: "Dernier arrivé", data: max_data}
+            { label: "Temps moyen (en secondes)", data: avg_data},
+            { label: "Dernier arrivé (en secondes)", data: max_data}
           ],
   {
     series: {
