--- a/views/admin/index.html.erb
+++ b/views/admin/index.html.erb
@@ -1,7 +1,11 @@
 <form action="/send_mail" method="post">
-    <input name="commit" type="submit" value="Envoyer un mail"/>
+  <input name="commit" type="submit" value="Envoyer un mail"/>
 </form>
 <br/>
 <form action="/check_all" method="get">
-    <input name="commit" type="submit" value="Relever les comptes"/>
+  <input name="commit" type="submit" value="Relever les comptes"/>
+</form>
+<br/>
+<form action="/new_account" method="get">
+  <input name="commit" type="submit" value="Ajouter un compte"/>
 </form>
