--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -31,7 +31,7 @@ fieldset
 #content
   position: absolute
   top: 70px
-  left: 100px
+  left: 150px
 
 #title
   font-size: 36px
@@ -40,7 +40,7 @@ fieldset
 #navigation
   position: absolute
   top: 40px
-  left: 100px
+  left: 150px
   font-size: 16px
 
 #navigation a
@@ -84,5 +84,6 @@ p
   height: 200px
 
 #legend
-  padding-bottom: 10px
-  padding-left: 10px
+  position: absolute
+  top: 130px
+  left: 20px
