Titre pour les graphes

--- a/views/accounts/show.html.erb
+++ b/views/accounts/show.html.erb
@@ -1,4 +1,7 @@
+<div id="graphTitle">Délai d'arrivée du mail en secondes</div>
+
 <div class="graph" id="graphAccount"></div>
+
 <div id="legend"></div>
 
 <script>
