--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -82,6 +82,11 @@ p
 .graph
   width: 600px
   height: 200px
+  padding-bottom: 10px
+
+#graphTitle
+  padding-left: 15px
+  padding-top: 10px
 
 #legend
   position: absolute
