sass est overkill

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <link href="/stylesheet.css" rel="stylesheet" type="text/css"/>
+  <link href="/dredd.css" rel="stylesheet" type="text/css"/>
   <title>[dredd] <%= @title %></title>
   <meta charset="utf-8">
   <script src="/jquery.js" type="text/javascript"></script>
