donnée devenue inutile

--- a/views/accounts/show.html.erb
+++ b/views/accounts/show.html.erb
@@ -10,12 +10,10 @@
    @original_messages.each{|original_message| original_messages_hash[original_message.id] = original_message}
 
   plot_data = []
-  data_info = []
   @received_messages.each do |received_message|
     original_message = original_messages_hash.delete(received_message.original_message_id)
     if original_message
       plot_data << [(original_message.sent_at.to_i * 1000), received_message.delay]
-      data_info << received_message.id
     end
   end
   miss_data = []
@@ -25,14 +23,10 @@
 
   %>
 
-  <%= "var plot_data = #{plot_data.to_json};
-      var miss_data = #{miss_data.to_json};
-      var data_info = #{data_info.to_json};"%>
-
   $.plot($("#graphAccount"),
           [
-            { label: "Délai (en secondes)", data: plot_data, lines: { show: true }},
-            { label: "Mails manquants", data: miss_data, lines: { show: false }}
+            { label: "Délai (en secondes)", data: <%= plot_data.to_json %>, lines: { show: true }},
+            { label: "Mails manquants", data: <%= miss_data.to_json %>, lines: { show: false }}
           ],
   {
     series: {
