--- a/public/dredd.css
+++ b/public/dredd.css
@@ -35,13 +35,14 @@ fieldset {
 
 #content {
   position: absolute;
-  top: 70px;
+  top: 80px;
   left: 150px;
 }
 
 #title {
   font-size: 36px;
   padding-bottom: 10px;
+  font-weight: bold;
 }
 
 #navigation {
@@ -96,7 +97,7 @@ p {
 }
 
 .graph {
-  width: 600px;
+  width: 700px;
   height: 200px;
   padding-bottom: 10px;
 }
