--- a/views/admin/config.html.erb
+++ b/views/admin/config.html.erb
@@ -6,6 +6,7 @@
     <%= input_text('email_to', 'Email de destination', @email_to) %>
     <%= input_text('email_subject', 'Titre', @email_subject, 50) %>
     <%= input_text_area('email_body', 'Contenu', @email_body, 120, 5) %>
+    <%= input_text('backend_password', 'Mot de passe pour le backend', @backend_password) %>
 
     <input name="commit" type="submit" value="Mettre à jour"/>
   </fieldset>
