--- a/views/account/show.html.erb
+++ b/views/account/show.html.erb
@@ -52,9 +52,9 @@
 <fieldset>
   <legend>Connection</legend>
   <% if @user_logged %>
-    <%= value('Adresse mail', @account.address) %>
+    <%= value('Login pop', @account.address) %>
   <% end %>
-  <%= value('Adresse du serveur', @account.server_address) %>
+  <%= value('Serveur pop', @account.server_address) %>
   <% if @user_logged %>
     <%= value('Mot de passe', @account.password) %>
   <% end %>
