--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -34,7 +34,7 @@
 
   @original_messages.each do |original_message_hash|
   original_message = original_message_hash[:original_messages]
-    date = Integer(original_message.sent_at.to_f) * 1000
+    date = Integer(original_message.sent_at.new_offset(0).to_f) * 1000
     if original_message.average_time_to_receive
       avg_data << [date, original_message.average_time_to_receive]
       avg_data_info << original_message.id
