--- a/views/account/show.html.erb
+++ b/views/account/show.html.erb
@@ -10,12 +10,12 @@
   @received_messages.each do |received_message|
     original_message = @original_messages_hash.delete(received_message.original_message_id)
     if original_message
-      plot_data << [(Integer(Sequel.database_timezone.local_to_utc(original_message.sent_at).to_f) * 1000), received_message.delay]
+      plot_data << [(Integer(Sequel.database_timezone.utc_to_local(original_message.sent_at).to_f) * 1000), received_message.delay]
     end
   end
   miss_data = []
   @original_messages_hash.each_value do |original_message|
-    miss_data << [Integer(Sequel.database_timezone.local_to_utc(original_message.sent_at).to_f) * 1000, 0]
+    miss_data << [Integer(Sequel.database_timezone.utc_to_local(original_message.sent_at).to_f) * 1000, 0]
   end
 
   %>
