--- a/views/about.html.erb
+++ b/views/about.html.erb
@@ -1,5 +1,5 @@
 <p>Surveillance des mails de <a href="http://listes.rezo.net">http://listes.rezo.net</a>.</p>
 
-<p>Idée par Fil, réalisation Archiloque</p>
+<p>Réalisation Archiloque, sur une idée de Fil</p>
 
 <p>Code source sous license MIT disponible <a href="http://github.com/archiloque/dredd">ici</a>.</p>
