graphique plus haut

--- a/views/account/show.html.erb
+++ b/views/account/show.html.erb
@@ -1,4 +1,4 @@
-<div id="graphTitle">Délai d'arrivée du mail en secondes</div>
+<div id="graphTitle">Délai d'arrivée des mails en secondes</div>
 
 <div class="graph" id="graphAccount"></div>
 
