--- a/public/dredd.css
+++ b/public/dredd.css
@@ -98,13 +98,18 @@ p {
 
 .graph {
   width: 700px;
-  height: 300px;
+  height: 400px;
   padding-bottom: 10px;
 }
 
 #graphTitle {
   padding-left: 15px;
   padding-top: 10px;
+}
+
+.plotSpan {
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 #lateral {
