échelle quadratique pour l'affichage

--- a/views/account/show.html.erb
+++ b/views/account/show.html.erb
@@ -32,7 +32,14 @@
       points: { show: true }
     },
     xaxis: { mode: "time" },
-    yaxis: { min: 0},
+    yaxis: { min: 0,
+      transform: function (v) {
+        return Math.sqrt(v);
+      },
+      inverseTransform: function (v) {
+        return v * v;
+      }
+    },
     grid: { hoverable: true, clickable: true },
     legend: { show: true, container: $("#legend") }
   });
