--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -26,15 +26,16 @@
     date = Integer(Sequel.database_timezone.utc_to_local(original_message.sent_at).to_f) * 1000
     if original_message.average_time_to_receive
       avg_data << [date, original_message.average_time_to_receive]
-      avg_data_info << original_message.id
     end
     slower_received_message = original_message_hash[:slower_received_message]
     if slower_received_message
       max_data << [date, slower_received_message.delay]
-      max_data_info << [original_message_hash[:account].name, slower_received_message.id]
     end
     original_messages_by_id[original_message.id] = original_message
   end
+
+  avg_data.sort!{|x,y| x[0] <=> y[0] }
+  max_data.sort!{|x,y| x[0] <=> y[0] }
 
   # hash account id => account name
   accounts_by_id = {}
@@ -45,8 +46,11 @@
 
   # hash account name => array of [message sent time, message delay]
   messages = Hash.new{ |hash, key| hash[key] = [] }
-  @received_messages.each do |received_message|
-      messages[received_message.account_id] << [(Integer(Sequel.database_timezone.utc_to_local(original_messages_by_id[received_message.original_message_id].sent_at).to_f) * 1000), received_message.delay]
+  unless original_messages_by_id.empty?
+      messages_ids = original_messages_by_id.keys
+      ReceivedMessage.where(:original_message_id => messages_ids.min..messages_ids.max).order(:original_message_id.asc).each do |received_message|
+        messages[received_message.account_id] << [(Integer(Sequel.database_timezone.utc_to_local(original_messages_by_id[received_message.original_message_id].sent_at).to_f) * 1000), received_message.delay]
+    end
   end
 
   dataset = {}
