pas d'affichage de points pour les courbes mensuelles

--- a/views/account/show.html.erb
+++ b/views/account/show.html.erb
@@ -29,7 +29,7 @@
           ],
   {
     series: {
-      points: { show: true }
+      points: { show: <%= @show_points %> }
     },
     xaxis: { mode: "time" },
     yaxis: { min: 0,
